# MoosePyBridge

./: .gitignore  README.md  run_control.cmd  run_control.ps1  run_control_interactive.cmd  run_control_interactive.ps1  run_interactive.cmd  run_interactive.ps1  run_map.cmd  run_map.ps1  run_server.cmd  run_server.ps1  run_simple_message.cmd  run_simple_message.ps1  setup.cfg
docs/: CONTROL_API.md  INTENTS.md  ROADMAP.md  TARGET_SEMANTICS.md
examples/: inspect_ops_state.py  trace_auftrag.py
examples/advisory/: apply_recommended_auftrag.py  apply_recommended_bai.py  apply_recommended_control_min.py  find_capable_cohorts.py  validate_auftrag_request.py
examples/control_server_client/: apply_arty_with_control_client.py  interactive_control_client.py
examples/frontline/: frontline_prototype.py
examples/sdk/: auftrag.py  monitor_global_picture.py  monitor_group_distance.py  monitor_intel.py  monitor_legion.py  territories.py
examples/simple_message/: send_message.py
examples/tactical_annotations/: annotate_object.py
examples/typed_state/: inspect_cohorts.py  inspect_legions.py  inspect_ops_state.py
lua/: MooseBridge.lua  MooseBridgeAuftragExecutionExtension.lua  MooseBridgeAuftragTraceExtension.lua  MooseBridgeIntelExtension.lua  MooseBridgeJson.lua  MooseBridgeLegionSnapshots.lua  MooseBridgeMissionExample.lua  MooseBridgeOps.lua  MooseBridgePayloadExtension.lua  MooseBridgeSocketTuningExtension.lua  Territory.lua
moosebridge_v1/: RELEASE_NOTES.md  package.txt
moosebridge_v1/lua/: MooseBridgeJson.lua  socket_test.lua
moosebridge_v1/tests/: test_protocol.py
python/moosebridge/: __init__.py  __main__.py  advisory.py  auftraege.py  auftraege.pyi  clock.py  (+21 more)
tests/: test_control.py  test_frontlines.py  test_intents.py  test_map_server.py  test_models.py  test_protocol.py  test_sdk.py  test_server.py
tmp/: global_picture.geojson
(+7 files in other folders)
