[metadata]
name = moosebridge
version = 0.1.0

[options]
package_dir =
    = python
packages = find:
python_requires = >=3.10

[options.packages.find]
where = python

[options.entry_points]
console_scripts =
    moosebridge-daemon = moosebridge.daemon:main
    moosebridge-server = moosebridge.daemon:main
    moosebridge-standalone-server = moosebridge.server:main
    moosebridge-control = moosebridge.control_cli:main

[tool:pytest]
pythonpath = python
