[metadata]
name = moosebridge
version = 0.1.0

[options]
package_dir =
    = python
packages = find:
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where = python

[options.package_data]
moosebridge =
    py.typed
    *.pyi
    map_ui/*.html
    map_ui/*.css
    map_ui/*.js

[options.extras_require]
map =
    fastapi>=0.115,<1
    uvicorn[standard]>=0.34,<1

[options.entry_points]
console_scripts =
    moosebridge-daemon = moosebridge.daemon:main
    moosebridge-server = moosebridge.daemon:main
    moosebridge-standalone-server = moosebridge.server:main
    moosebridge-control = moosebridge.control_cli:main
    moosebridge-map = moosebridge.map_server:main

[tool:pytest]
pythonpath = python
